Fix Css grid collapse
- Grid columns collapsed when dragging the browser window to smaller sizes. White space appeared where column items used to be.
- Changed body min-height 100% to 100vh.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,7 +11,8 @@ html {
 body {
   font-family: "Exo 2", "Roboto", "Open Sans", sans-serif !important;
   font-size: 16px;
-  min-height: 100%;
+  /* Prevents responsive Css grid from collapsing. */
+  min-height: 100vh;
 }
 
 li {
